[package]
name = "hydrus_gubbins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hydrus_gubbins"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"

# These are used for the "generating additional hashes" speedup:
# TODO: Check if openssl's implementations are worth importing...
memmap2 = "0.9.4"
digest = "0.10.6"
md-5 = "0.10.6"
sha1 = "0.10.6"
# sha2 = "0.10.6" # for sha512 # we actually use ring instead since it's faster...
ring = "0.17.8"

tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
